fix: nav bug (adjusted nav and overlay z-index)

--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -18,6 +18,7 @@
 
 .headerNav {
     position: absolute;
+    z-index: 2;
     display: flex;
     flex-direction: column;
     gap: 24px;
@@ -32,7 +33,7 @@
 
 .headerNavScreenOverLay {
     position: absolute;
-    z-index: -1;
+    z-index: 1;
     top: 64px;
     width: 100vw;
     height: 100vh;
@@ -49,7 +50,6 @@
         display: flex;
         align-items: center;
         height: 96px;
-        /* max-width: 1106px; */
     }
     
     .headerLogo{
